@@ -53,6 +53,9 @@
 /* Define if nested functions are broken on this compiler */
 #undef BROKEN_NESTED_FUNCTIONS
 
+/* Define if SO_REUSEADDR is broken on this system */
+#undef BROKEN_SO_REUSEADDR
+
 /* Define if you have this header */
 #undef HAVE_GICONV_H
 
